--- a/index.html
+++ b/index.html
@@ -18,57 +18,129 @@
   </head>
   <body>
     <div>
-       <a href="https://www.blockchain.com/card">Spend and earn crypto with the Blockchain.com Visa® Card. Join the waitlist.</a>
+      <a href="https://www.blockchain.com/card"
+        >Spend and earn crypto with the Blockchain.com Visa® Card. Join the
+        waitlist.</a
+      >
       <header class="top-side">
-        <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Blockchain.com</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Wallet</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Exchange</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Explorer</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Institutional</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link"><button class="btn">Log In</button></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link"><button class="btn btn-light">Sign Up</button></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
-      <hr>
-      <main>
-        <div>ABOVE EMAIL INPUT</div>
-        <form>
-          <label for="email"> </label>
-          <input type="email" class="form-control" id="email">
-          <button class="btn btn-light">Sign Up</button>
-        </form>
-        <div> BELOW INPUT</div>
         <div>
-          GET STARTED
-
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Blockchain.com</a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"
+                      >Wallet</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Exchange</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Explorer</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Institutional</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"><button class="btn">Log In</button></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"
+                      ><button class="btn btn-light">Sign Up</button></a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         </div>
-
+      </header>
+      <hr />
+      <main>
+        <section class="section-1">
+          <div>
+            <h1>The world’s most popular way to buy, sell, and trade crypto</h1>
+            <p>
+              Trusted by millions since 2011 with over $1 Trillion in crypto
+              transactions.
+            </p>
+          </div>
+          <form>
+            <label for="email"> </label>
+            <input type="email" class="form-control" id="email" />
+            <button class="btn btn-light">Sign Up</button>
+          </form>
+          <div>BELOW INPUT</div>
+          <h2>The Easiest and Most Powerful Crypto Wallet</h2>
+          <div>
+            <h3>Buy and Sell Crypto in Minutes</h3>
+            <p>
+              Instantly buy Bitcoin with credit card, debit card, or by linking
+              your bank.
+            </p>
+          </div>
+          <div>
+            <h3>Earn up to 10% on your crypto</h3>
+            <p>
+              Transfer your crypto to a Staking or Rewards Account to earn up to
+              10% annually.
+            </p>
+          </div>
+          <div>
+            <h3>Control your funds with Private Key Wallet</h3>
+            <p>No one but you can access Private Key Wallets. Not even us.</p>
+          </div>
+          <div>
+            <h3>At home or on the go</h3>
+            <p>Manage your Wallet from a desktop, mobile, or both.</p>
+          </div>
+          <div>
+            <h3>All your crypto in one place</h3>
+            <p>
+              View and manage your balance across the Wallet, the Exchange, and
+              your hardware, all in your wallet dashboard.
+            </p>
+          </div>
+          <a class="btn btn-primary">Get started</a>
+        </section>
+        <section>
+          <div><p>Exhangr</p></div>
+          <h2>Lightning-Fast Crypto Trading</h2>
+          <div>
+            <h2>Trade in 3 fiat currencies</h2>
+            <p>The Exchange supports USD, EUR, and GBP.</p>
+          </div>
+          <div>
+            <h2>A matching engine that can keep up with you</h2>
+            <p>The world’s fastest crypto matching engine, built by and for traders.</p>
+          </div>
+          <div>
+            <h2>24/7 live chat support</h2>
+            <p>Chat with customer support directly in the Exchange, anytime.</p>
+          </div>
+          <div>
+            <h2>Margin Trading</h2>
+            <p>More buying power means up to 5x the profit.</p>
+          </div>
+          <div>
+            <a class="btn btn-primary">Trade Now</a>
+          </div>
+        </section>
       </main>
-      <footer>
-        FOOTER HERE
-      </footer>
+      <footer>FOOTER HERE</footer>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
