--- a/index.html
+++ b/index.html
@@ -75,38 +75,48 @@
               </div>
             </form>
             </section>
+
             <section class="down">
-              <h2>The Easiest and Most Powerful Crypto Wallet</h2>
-              <div>
-                <h3>Buy and Sell Crypto in Minutes</h3>
-                <p>
-                  Instantly buy Bitcoin with credit card, debit card, or by linking
-                  your bank.
-                </p>
+              <p style="color:rgb(162, 101, 219);">Wallet</p>
+              <h2 style="color:rgb(162, 101, 219);">The Easiest and Most <br>Powerful Crypto Wallet</h2>
+
+              <div type="button" class="card mt-3" style="width:30em; border-radius:7px;"  onclick="card_1()">
+                <div class="card-body">
+                  <h3 class="card-title">Buy and Sell Crypto in Minutes</h3>
+                  <p class="card-text" id="card-1-body-1" ></p>
+                </div>
               </div>
-              <div>
-                <h3>Earn up to 10% on your crypto</h3>
-                <p>
-                  Transfer your crypto to a Staking or Rewards Account to earn up to
-                  10% annually.
-                </p>
+
+              <div type="button" class="card mt-3" style="width:30em; border-radius:7px;"  onclick="card_2()">
+                <div class="card-body">
+                  <h3 class="card-title">Earn up to 10% on your crypto</h3>
+                  <p class="card-text" id="card-2-body-2" ></p>
+                </div>
               </div>
-              <div>
-                <h3>Control your funds with Private Key Wallet</h3>
-                <p>No one but you can access Private Key Wallets. Not even us.</p>
+              <div type="button" class="card mt-3" style="width:30em; border-radius:7px;"  onclick="card_3()">
+                <div class="card-body">
+                  <h3 class="card-title">Control your funds with Private Key Wallet</h3>
+                  <p class="card-text" id="card-3-body-3" ></p>
+                </div>
               </div>
-              <div>
-                <h3>At home or on the go</h3>
-                <p>Manage your Wallet from a desktop, mobile, or both.</p>
+
+              <div type="button" class="card mt-3" style="width:30em; border-radius:7px;"  onclick="card_4()">
+                <div class="card-body">
+                  <h3 class="card-title">At home or on the go</h3>
+                  <p class="card-text" id="card-4-body-4" ></p>
+                </div>
               </div>
-              <div>
-                <h3>All your crypto in one place</h3>
-                <p>
-                  View and manage your balance across the Wallet, the Exchange, and
-                  your hardware, all in your wallet dashboard.
-                </p>
-              </div>
-              <a class="btn btn-primary">Get started</a>
+
+              <div type="button" class="card mt-3" style="width:30em; border-radius:7px;"  onclick="card_5()">
+                <div class="card-body">
+                  <h3 class="card-title">All your crypto in one place</h3>
+                  <p class="card-text" id="card-5-body-5" ></p>
+                </div>
+              </div>                   
+               
+                </div>
+                <a class="btn mt-4" style="color:White; background:rgb(162, 101, 219);">Get started</a>
+              </div>             
             
               <div><p>Exchange</p></div>
               <h2>Lightning-Fast Crypto Trading</h2>
