--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </section>
 
             <section class="down">
-              <p style="color:rgb(162, 101, 219);">Wallet</p>
+              <p style="color:rgb(162, 101, 219);font-size: 2em;">Wallet</p>
               <h2 style="color:rgb(162, 101, 219);">The Easiest and Most <br>Powerful Crypto Wallet</h2>
 
               <div type="button" class="card mt-3" style="width:30em; border-radius:7px;"  onclick="card_1()">
@@ -118,26 +118,38 @@
                 <a class="btn mt-4" style="color:White; background:rgb(162, 101, 219);">Get started</a>
               </div>             
             
-              <div><p>Exchange</p></div>
-              <h2>Lightning-Fast Crypto Trading</h2>
-              <div>
-                <h2>Trade in 3 fiat currencies</h2>
-                <p>The Exchange supports USD, EUR, and GBP.</p>
+              <div> <p style="color:rgb(7, 143, 234);font-size: 2em; margin-top: 1.5em;">Exchange</p></div>
+              <h2 style="color: rgb(7, 143, 234);">Lightning-Fast Crypto Trading</h2>
+
+              <div type="button" class="card mt-3" style="width:30em; border-radius:7px;"
+                onclick="card_11()"> 
+                <div class="card-blue-body">
+                  <div class="card-body"> <h3 class="card-title">Trade in 3 fiat currencies</h3> <p class="card-text" id="card-11-body-1" ></p> </div> </div>
+                </div>
+
+                <div type="button" class="card mt-3" style="width:30em; border-radius:7px;"
+                onclick="card_22()"> 
+                <div class="card-blue-body">
+                  <div class="card-body"> <h3 class="card-title">A matching engine that can keep up with you </h3> <p class="card-text" id="card-22-body-2" ></p> </div> </div>
+                </div>
+
+                <div type="button" class="card mt-3" style="width:30em; border-radius:7px;"
+                onclick="card_33()"> 
+                <div class="card-blue-body">
+                  <div class="card-body"> <h3 class="card-title">24/7 live chat support</h3> <p class="card-text" id="card-33-body-3" ></p> </div> </div>
+                </div>
+
+                <div type="button" class="card mt-3" style="width:30em; border-radius:7px;"
+                onclick="card_44()"> 
+                <div class="card-blue-body">
+                  <div class="card-body"> <h3 class="card-title">Margin Trading </h3> <p class="card-text" id="card-44-body-4" ></p> </div> </div>
+                </div>     
+
+     
+
               </div>
               <div>
-                <h2>A matching engine that can keep up with you</h2>
-                <p>The world’s fastest crypto matching engine, built by and for traders.</p>
-              </div>
-              <div>
-                <h2>24/7 live chat support</h2>
-                <p>Chat with customer support directly in the Exchange, anytime.</p>
-              </div>
-              <div>
-                <h2>Margin Trading</h2>
-                <p>More buying power means up to 5x the profit.</p>
-              </div>
-              <div>
-                <a class="btn btn-primary">Trade Now</a>
+                <a class="btn btn-primary mt-4 ">Trade Now</a>
               </div>
             </section>
 
