--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
               </ul>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-light" type="submit">Login</button>
-                <button class="btn btn-light" type="submit">Sign up</button>
+                <button class="btn btn-outline-light m-lg-4 col-3" type="submit">Login</button>
+                <button class="btn btn-light col-3 mt-4" type="submit" style="height:2.5em ;">Sign up</button>
 
               </form>
             </div>
@@ -149,6 +149,23 @@
               <div>
                 <a class="btn btn-primary mt-4 ">Trade Now</a>
               </div>
+              <div class="card mt-3" style="width:45em; border-radius:7px; background-color: rgb(227, 221, 232);">
+                <div>
+                  <p style="font-size: 2em;">Institutional</p>
+                </div>
+                <div class="card-darkblue-body">
+                  <div class="card-body">
+                    <h3 class="card-title" style="color:rgb(17, 16, 16);">Bespoke crypto lending, <br>trading, and custody <br>for institutions
+                    </h3>
+                    <p class="card-text">Blockchain.com Institutional Markets is a full-stack crypto services platform that works with crypto-native businesses and institutional clients on lending, trading, and custody solutions tailored to your needs. </p>
+                  </div>
+                </div> 
+                <div>
+                  <a class="btn mt-5 m-lg-4" style="color:White; background:rgb(23, 22, 30);">Beome a client</a>
+                </div>                             
+
+              </div>
+              
 
               <div> <p style="color:rgb(252, 75, 10);font-size: 2em; margin-top: 1.5em;">Explore</p></div>
               <h2 style="color: rgb(252, 75, 10);">Blockchain Data is in Our DNA</h2>
