--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-light m-lg-4 col-3" type="submit">Login</button>
-                <button class="btn btn-light col-3 mt-4" type="submit" style="height:2.5em ;">Sign up</button>
+                <button class="btn btn-light col-3 mt-4" type="submit" style="height:2.5em ;"><a href="signUp.html" style="text-decoration: none;color:black;">Sign Up</a></button>
 
               </form>
             </div>
