done with sign up page

--- a/signUp.html
+++ b/signUp.html
@@ -15,11 +15,14 @@
 
     <link href="index.css" />
   </head>
-  <body>
+  <body style="background-image:url('img/back.jpg') ;">
     <div class="container">
-      <div class="row" style="margin-top: 7em">
+        <div class="text-center" style="font-size: 2em; font-weight: bold; padding-top: 2em;">
+            <a href="index.html" style="text-decoration:none ;"><span style="color: white;">Blockchain </span><span style="color:grey;">.com</span></a>
+        </div>
+      <div class="row" style="margin-top: 3em">
         <div class="col-5 offset-md-3">
-          <div class="card mb-5" style="border-radius: 10px; width: 28em; padding-left: 2em;">
+          <div class="card mb-5" style="border-radius: 10px; width: 28em; padding-left: 2em; padding-right:2em; margin-left: 10em;">
             <div class="card-body">
               <h3 class="card-title my-4">
                 Create Your Blockchain.com Account
@@ -29,13 +32,13 @@
               </p>
 
               <form class="mt-4">
-                <div class="col-8">
+                <div class="col-12">
                   <div style="text-align: left; font-weight: bold">
                     <label>Email Address</label>
                   </div>
                   <div class="mb-3">
                     <input
-                      class="form-control col-3"
+                      class="form-control col-4"
                       placeholder="Enter Email Address"
                     />
                   </div>
@@ -88,9 +91,17 @@
 
                 <button class="btn" style="background-color:black; margin-left:1em ;"><img src="img/play.jpg" width="90px"></button>
             </div>
+            <div class="mt-5 mb-2">
+                <p style="color: grey; font-weight:bold;">Already have a Blockchain.com Account? <a href="#" style=" text-decoration: none;">Log In -></a></p> 
+            </div>
+
+
           </div>
+
         </div>
+
       </div>
+
     </div>
 
     <script
