--- a/signUp.html
+++ b/signUp.html
@@ -92,7 +92,7 @@
                 <button class="btn" style="background-color:black; margin-left:1em ;"><img src="img/play.jpg" width="90px"></button>
             </div>
             <div class="mt-5 mb-2">
-                <p style="color: grey; font-weight:bold;">Already have a Blockchain.com Account? <a href="#" style=" text-decoration: none;">Log In -></a></p> 
+                <p style="color: grey; font-weight:bold;">Already have a Blockchain.com Account? <a href="login.html" style=" text-decoration: none;">Log In -></a></p> 
             </div>
 
 
